# cli-tools

./: .gitignore  PROGRESS.md  README.md
claude-usage/: Cargo.toml  DASHBOARD_SPEC.md  INCREMENTAL_PARSING_DESIGN.md  INTEGRATION_GUIDE.md  LIVE_UPDATE_ARCHITECTURE.md  LIVE_UPDATE_DESIGN.md  NOTES.md  README.md
claude-usage/src/: cli.rs  file_tracker.rs  file_watcher.rs  formatters.rs  incremental_parser.rs  lib.rs  main.rs  model_name.rs  models.rs  parser.rs  pricing.rs
claude-usage/src/dashboard/: app.rs  data.rs  events.rs  mod.rs  runner.rs  ui.rs
claude-usage/src/dashboard/widgets/: minute_chart.rs  mod.rs  request_feed.rs  stats_panel.rs  summary_bar.rs
